[gd_scene load_steps=16 format=3 uid="uid://c4g6ym5fs0b0i"]

[ext_resource type="Script" path="res://addons/ac_engine/scripts/game_controller.gd" id="1_8usi3"]
[ext_resource type="Script" path="res://addons/ac_engine/scripts/game_timer.gd" id="2_3ydk0"]
[ext_resource type="PackedScene" uid="uid://dk3j1mfcnkdrn" path="res://addons/ac_engine/nodes/combat_map.tscn" id="2_33xyj"]
[ext_resource type="Script" path="res://addons/ac_engine/scripts/player_manager.gd" id="5_3fs5h"]
[ext_resource type="Script" path="res://addons/ac_engine/scripts/game_player.gd" id="6_2uuvx"]
[ext_resource type="Script" path="res://addons/ac_engine/scripts/group_manager.gd" id="7_wuls5"]
[ext_resource type="PackedScene" uid="uid://b3htp8r7eik6j" path="res://addons/ac_engine/nodes/combat_interface.tscn" id="8_258om"]
[ext_resource type="Script" path="res://addons/ac_engine/scripts/game_group.gd" id="8_lqeeu"]
[ext_resource type="Script" path="res://addons/ac_engine/scripts/craft_system.gd" id="9_eyi1c"]
[ext_resource type="Script" path="res://addons/ac_engine/scripts/craft_graph.gd" id="10_spjmg"]
[ext_resource type="Script" path="res://addons/ac_engine/scripts/wave_controller.gd" id="11_o7d1d"]
[ext_resource type="Script" path="res://addons/ac_engine/scripts/wave.gd" id="12_01ux7"]
[ext_resource type="PackedScene" uid="uid://t10trhsj0g5u" path="res://addons/ac_engine/test_project/combat_units/comunit_golem_fire.tscn" id="13_vk3cp"]
[ext_resource type="PackedScene" uid="uid://b24pogyy0lkcu" path="res://addons/ac_engine/test_project/combat_units/comunit_golem_supreme.tscn" id="14_1sf0b"]
[ext_resource type="PackedScene" uid="uid://dq2vr23l4724c" path="res://addons/ac_engine/test_project/combat_units/comunit_golem_water.tscn" id="15_1dwq6"]

[node name="GameController" type="Node" node_paths=PackedStringArray("player_id", "game_timer", "game_map", "group_manager", "player_manager", "combat_interface", "wave_controller")]
script = ExtResource("1_8usi3")
game_state = "combat"
player_id = NodePath("PlayerManager/PlayerBlue")
game_timer = NodePath("GameTimer")
game_map = NodePath("CombatMap")
group_manager = NodePath("GroupManager")
player_manager = NodePath("PlayerManager")
combat_interface = NodePath("CombatInterface")
wave_controller = NodePath("AcWaveController")

[node name="CombatMap" parent="." instance=ExtResource("2_33xyj")]
position = Vector2(32, 32)
areas = []

[node name="CombatInterface" parent="." node_paths=PackedStringArray("player", "game_controller") instance=ExtResource("8_258om")]
player = NodePath("../PlayerManager/PlayerBlue")
game_controller = NodePath("..")

[node name="PlayerManager" type="Node" parent="."]
script = ExtResource("5_3fs5h")

[node name="PlayerBlue" type="Node" parent="PlayerManager" node_paths=PackedStringArray("player_group")]
script = ExtResource("6_2uuvx")
player_name = "player_blue"
player_id = 0
player_group = NodePath("../../GroupManager/GroupPlayer")

[node name="PlayerRed" type="Node" parent="PlayerManager" node_paths=PackedStringArray("player_group")]
script = ExtResource("6_2uuvx")
player_name = "player_red"
player_id = 1
player_group = NodePath("../../GroupManager/GroupEnemy")

[node name="GroupManager" type="Node" parent="."]
script = ExtResource("7_wuls5")

[node name="GroupNeutral" type="Node" parent="GroupManager"]
script = ExtResource("8_lqeeu")
group_name = "group_neutral"
group_color = Color(0.419608, 0.419608, 0.419608, 1)

[node name="GroupEnemy" type="Node" parent="GroupManager"]
script = ExtResource("8_lqeeu")
group_name = "group_enemy"
group_type = 1
group_color = Color(0.827451, 0.0196078, 0, 1)

[node name="GroupPlayer" type="Node" parent="GroupManager"]
script = ExtResource("8_lqeeu")
group_name = "group_player"
group_type = 2
group_color = Color(0, 0.00784314, 1, 1)

[node name="GameTimer" type="Node" parent="."]
script = ExtResource("2_3ydk0")

[node name="Timer" type="Timer" parent="GameTimer"]

[node name="Label" type="Label" parent="GameTimer"]
offset_right = 832.0
offset_bottom = 32.0
horizontal_alignment = 1
vertical_alignment = 1

[node name="CraftSystem" type="Node" parent="." node_paths=PackedStringArray("craft_graph")]
script = ExtResource("9_eyi1c")
craft_graph = NodePath("CraftGraph")

[node name="CraftGraph" type="Node" parent="CraftSystem"]
script = ExtResource("10_spjmg")

[node name="AcWaveController" type="Node" parent="." node_paths=PackedStringArray("game_controller")]
script = ExtResource("11_o7d1d")
wave_count = 1
game_controller = NodePath("..")

[node name="AcWave" type="Node2D" parent="AcWaveController"]
script = ExtResource("12_01ux7")
prep_time = 3.0

[node name="ComunitGolemFire" parent="AcWaveController/AcWave" node_paths=PackedStringArray("player", "group") instance=ExtResource("13_vk3cp")]
player = NodePath("../../../PlayerManager/PlayerRed")
group = NodePath("../../../GroupManager/GroupEnemy")
unit_pos = Vector2(1, 1)

[node name="ComunitGolemWater" parent="AcWaveController/AcWave" node_paths=PackedStringArray("player", "group") instance=ExtResource("15_1dwq6")]
player = NodePath("../../../PlayerManager/PlayerRed")
group = NodePath("../../../GroupManager/GroupEnemy")
unit_pos = Vector2(1, 2)

[node name="ComunitGolemSupreme" parent="AcWaveController/AcWave" node_paths=PackedStringArray("player", "group") instance=ExtResource("14_1sf0b")]
player = NodePath("../../../PlayerManager/PlayerRed")
group = NodePath("../../../GroupManager/GroupEnemy")
unit_pos = Vector2(2, 1)
